--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="A searchable calendar that catalogs liberation struggles around the world."
     />
+    <meta property="og:title" content="A People's Calendar" />
+    <meta property="og:description" content="A People's Calendar is a searchable On This Day calendar that catalogs liberation struggles from all around the world, including strikes, protests, indigenous resistance to colonization, black liberation, and workers' revolution." />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>A People's Calendar</title>
   </head>
