--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta property="og:title" content="A People's Calendar" />
     <meta property="og:description" content="A People's Calendar is a searchable On This Day calendar that catalogs liberation struggles from all around the world, including strikes, protests, indigenous resistance to colonization, black liberation, and workers' revolution." />
-    <meta property="og:image" content="./apcIcon.png">
+    <meta property="og:image" content="https://www.apeoplescalendar.org/static/media/howardZinnHeadshot.0cd1793c.jpg">
     <meta property="og:url" content="http://www.apeoplescalendar.org">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>A People's Calendar</title>
