Trying reddit url for image preview icon

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
       content="A searchable calendar that catalogs liberation struggles around the world."
     />
     <meta property="og:title" content="A People's Calendar" />
-    <meta property="og:description" content="A People's Calendar is a searchable On This Day calendar that catalogs liberation struggles from all around the world, including strikes, protests, indigenous resistance to colonization, black liberation, and workers' revolution." />
-    <meta property="og:image" content="https://www.apeoplescalendar.org/static/media/Protests-85-skinniest.6b75292e.jpg">
+    <meta property="og:description" content="A People's Calendar is a searchable On This Day calendar that catalogs liberation struggles from all around the world, including strikes, protests, indigenous resistance to colonization, black liberation, and workers' revolution."/>
+    <meta property="og:image" content="https://styles.redditmedia.com/t5_2uasqy/styles/profileIcon_nwq5sbqzxie51.png?width=256&height=256&crop=256:256,smart&s=ffc3a19bf31424785036066501e505c6b6a3feb1">
     <meta property="og:url" content="http://www.apeoplescalendar.org">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>A People's Calendar</title>
