--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
     <title>A People's Calendar</title>
   </head>
   <body>
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="title" required />
+      <textarea name="message" required></textarea>
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
